--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -6,10 +6,23 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/react-router-dom": "5.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router": "5.2.0",
+    "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "uuid": "8.3.1",
     "web-vitals": "^0.2.4"
+  },
+  "devDependencies": {
+    "@types/jest": "26.0.16",
+    "@types/node": "14.14.10",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/uuid": "8.3.0",
+    "node-sass": "4.14.1",
+    "typescript": "4.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
