--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -9,9 +9,12 @@
     "@types/react-router-dom": "5.1.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-redux": "7.2.2",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "4.0.5",
+    "redux-websocket": "0.2.0-dev.7",
     "uuid": "8.3.1",
     "web-vitals": "^0.2.4"
   },
