--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -12,6 +12,8 @@
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-use-websocket": "^2.2.0",
+    "reselect": "^4.0.0",
     "uuid": "8.3.1",
     "web-vitals": "^0.2.4"
   },
