--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/classnames": "^2.2.11",
     "@types/react-router-dom": "5.1.6",
+    "classnames": "2.2.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "5.2.0",
