--- a/.github/workflows/deploy-node.js.yml
+++ b/.github/workflows/deploy-node.js.yml
@@ -35,3 +35,19 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
           dockerfile: src/web-client/Dockerfile
           tags: latest
+      - name: Deploy package to DigitalOcean
+        uses: appleboy/ssh-action@master
+        env:
+          GH_USERNAME: ${{ secrets.GH_USERNAME }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        with:
+          host: ${{ secrets.DIGITALOCEAN_HOST }}
+          username: ${{ secrets.DIGITALOCEAN_USERNAME }}
+          password: ${{ secrets.DIGITALOCEAN_PASSWORD }}
+          port: ${{ secrets.DIGITALOCEAN_PORT }}
+          envs: GH_USERNAME, GH_TOKEN
+          script: |
+            docker stop $(docker ps -a -q)
+            docker login docker.pkg.github.com -u $GH_USERNAME -p $GH_TOKEN
+            docker pull docker.pkg.github.com/wesleydebruijn/orlog/web-client:latest
+            docker run -dit -p 80:80 docker.pkg.github.com/wesleydebruijn/orlog/web-client:latest
