--- a/src/web-client/Dockerfile
+++ b/src/web-client/Dockerfile
@@ -8,6 +8,7 @@ RUN yarn && yarn build
 
 # Stage - Production
 FROM nginx:1.17-alpine
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+COPY --from=build /usr/src/app/build /var/www
+COPY ./src/web-client/nginx/nginx.conf /etc/nginx/nginx.conf
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
