--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -1,3 +1,7 @@
+upstream orlog {
+  server        orlog:4000;
+}
+
 server {
     listen 80;
     server_name orlog.app;
@@ -23,7 +27,7 @@ server {
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
 
     location / {
-        proxy_pass  http://orlog.app;
+        proxy_pass  http://orlog;
         proxy_set_header    Host                $http_host;
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
