--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,10 @@
 version: "3"
 
 services:
+  orlog:
+    image: docker.pkg.github.com/wesleydebruijn/orlog/orlog:latest
+    ports:
+      - "4000:4000"
   nginx:
     image: nginx:1.15-alpine
     restart: unless-stopped
@@ -19,3 +23,4 @@ services:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
     entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+network:
