--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           registry: docker.pkg.github.com
           username: ${{ secrets.GH_USERNAME }}
           password: ${{ secrets.GITHUB_TOKEN }}
-          dockerfile: Dockerfile
+          dockerfile: ./Dockerfile
           tags: latest
       - name: Deploy package to DigitalOcean
         uses: appleboy/ssh-action@master
