--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Elixir CI
+name: Test
 
 on:
   push:
@@ -18,7 +18,7 @@ jobs:
       - name: Set up Elixir
         uses: actions/setup-elixir@v1
         with:
-          elixir-version: "1.10.3" # Define the elixir version [required]
+          elixir-version: "1.11.2" # Define the elixir version [required]
           otp-version: "22.3" # Define the OTP version [required]
       - name: Restore dependencies cache
         uses: actions/cache@v2
