chore: update workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,4 +38,4 @@ jobs:
           script: |
             cd orlog
             git pull
-            docker-compose up -d
+            docker-compose up -d --force-recreate
