--- a/data/nginx/app.conf
+++ b/data/nginx/app.conf
@@ -32,4 +32,12 @@ server {
         proxy_set_header    X-Real-IP           $remote_addr;
         proxy_set_header    X-Forwarded-For     $proxy_add_x_forwarded_for;
     }
+
+    location /ws {
+        proxy_pass http://orlog/ws;
+        proxy_http_version 1.1;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection "upgrade";
+        proxy_set_header   Host $host;
+    }
 }
