--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -10,6 +10,7 @@
     "@types/react-router-dom": "5.1.6",
     "classnames": "^2.2.6",
     "react": "^17.0.1",
+    "react-async": "10.0.1",
     "react-dom": "^17.0.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
