--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -8,7 +8,9 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "2.2.11",
     "@types/react-router-dom": "5.1.6",
+    "autoprefixer": "^9",
     "classnames": "^2.2.6",
+    "postcss": "^7",
     "react": "^17.0.1",
     "react-async": "10.0.1",
     "react-dom": "^17.0.1",
@@ -17,10 +19,12 @@
     "react-scripts": "4.0.1",
     "react-use-websocket": "^2.2.0",
     "reselect": "^4.0.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "uuid": "8.3.1",
     "web-vitals": "^0.2.4"
   },
   "devDependencies": {
+    "@craco/craco": "6.0.0",
     "@types/jest": "26.0.16",
     "@types/node": "14.14.10",
     "@types/react": "17.0.0",
@@ -30,9 +34,9 @@
     "typescript": "4.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
