--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
-    "typescript.tsdk": "./src/web-client/node_modules/typescript/lib",
-    "editor.formatOnSave": true
+  "typescript.tsdk": "./src/web-client/node_modules/typescript/lib",
+  "editor.formatOnSave": true,
+  "editor.quickSuggestions": {
+    "strings": true
+  }
 }
