--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -39,6 +39,9 @@
     "test": "craco test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": "14.15.1"
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
