--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -7,14 +7,17 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/classnames": "2.2.11",
+    "@types/lodash": "^4.14.165",
     "@types/react-router-dom": "5.1.6",
     "classnames": "^2.2.6",
+    "lodash": "^4.17.20",
     "react": "^17.0.1",
     "react-async": "10.0.1",
     "react-dom": "^17.0.1",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
     "react-use-websocket": "^2.2.0",
     "reselect": "^4.0.0",
     "uuid": "8.3.1",
