feat: dynamic content
This change introduces the static components working with
the dynamic data from the websocket. It also improves loading
the favor data initially through the `GameData` provider.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,7 @@
 {
   "recommendations": [
     "ecmel.vscode-html-css",
-    "jakebecker.elixir-ls",
+    "elixir-lsp.elixir-ls",
     "eamodio.gitlens",
     "bradlc.vscode-tailwindcss"
   ]
