--- a/src/web-client/package.json
+++ b/src/web-client/package.json
@@ -11,6 +11,7 @@
     "@types/react-router-dom": "5.1.6",
     "classnames": "^2.2.6",
     "lodash": "^4.17.20",
+    "rc-slider": "9.7.1",
     "react": "^17.0.1",
     "react-async": "10.0.1",
     "react-dom": "^17.0.1",
